test/Fail/Issue4631.err
Issue4631.agda:10.12-13: error: [UnequalTypes]
The types
  R0
and
  R1
are not equal
when checking that all occurrences of pattern variable x have the
same type
